Fix table dark mode

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -101,7 +101,7 @@ table {
 }
 
 table, th, td {
-  border: thin solid black;
+  border: thin solid;
   border-collapse: collapse;
   padding: 0.4rem;
 }
